fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/Price_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Price Quote Line Item</label>
    <nameField>
        <displayFormat>PQL-{0000000}</displayFormat>
        <label>Price Quote Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>