fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Competetive_Product__c.field-meta.xml
<CustomField>
    <fullName>Competetive_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competetive product with teleflex product</description>
    <label>Competetive Product</label>
    <referenceTo>Cross_Reference__c</referenceTo>
    <relationshipLabel>Price Quote Line Items</relationshipLabel>
    <relationshipName>Price_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>