fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>25</length>
    <type>Text</type>
</CustomField>