fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <formula>Material_Name__r.Distribution_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>