fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Do_Not_Show_Zero_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Show_Zero_Pricing__c</fullName>
    <formula>ISBLANK( Material_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Show Zero Pricing</label>
    <type>Checkbox</type>
</CustomField>