fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Eligible_Price__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Price__c</fullName>
    <label>Eligible Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>