fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude products from any rules, pricing logic, etc. Initially created to exclude products from pricing in the Pricing Portal. Mainly cardiac products used in the cardiac bundles.</description>
    <inlineHelpText>Used to exclude products from any rules, pricing logic, etc. Initially created to exclude products from pricing in the Pricing Portal. Mainly cardiac products used in the cardiac bundles.</inlineHelpText>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>