fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Hide_Crossreference__c.field-meta.xml
<CustomField>
    <fullName>Hide_Crossreference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Crossreference</label>
    <type>Checkbox</type>
</CustomField>