fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>Price_Quote__r.Opportunity__r.Price_Quote__c = Price_Quote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>