fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/IsBold__c.field-meta.xml
<CustomField>
    <fullName>IsBold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether line item is bold or No.</description>
    <inlineHelpText>Shows you if the line item is bold.</inlineHelpText>
    <label>IsBold</label>
    <type>Checkbox</type>
</CustomField>