fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Price__c</fullName>
    <formula>Sales_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>