fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Manually_Selected_Contract__c.field-meta.xml
<CustomField>
    <fullName>Manually_Selected_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Selected Contract</label>
    <type>Checkbox</type>
</CustomField>