fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <formula>Material_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material</label>
    <type>Text</type>
</CustomField>