fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <description>Material Description field to hold description of material in customer&apos;s language for SAP callout in Pricing Portal.</description>
    <inlineHelpText>Material Description field to hold description of material in customer&apos;s language for SAP callout in Pricing Portal.</inlineHelpText>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>