fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Material_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Material_Name_Text__c</fullName>
    <description>Workflow populates this field from the Material/Product Lookup</description>
    <inlineHelpText>Workflow populates this field from the Material/Product Lookup</inlineHelpText>
    <label>Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>