fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Material_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Material_Product_Family__c</fullName>
    <formula>Text(Material_Name__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Product Family</label>
    <type>Text</type>
</CustomField>