fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Material_Status__c</fullName>
    <label>Material Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>