fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Min_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Qty__c</fullName>
    <description>Minimum order quantity allowed (EMEA).</description>
    <inlineHelpText>Minimum order quantity allowed (EMEA).</inlineHelpText>
    <label>Min Order Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>