fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/MRP_Group__c.field-meta.xml
<CustomField>
    <fullName>MRP_Group__c</fullName>
    <label>MRP Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>