fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <formula>if(Objective__c = &quot;01&quot;, &quot;Direct/Rebate&quot;, 
if(Objective__c = &quot;02&quot;, &quot;Direct&quot;, 
if(Objective__c = &quot;03&quot;, &quot;Distributor Netbill&quot;, 
if(Objective__c = &quot;04&quot;, &quot;Specialty Market&quot;, 
if(Objective__c = &quot;05&quot;, &quot;Strategic Accounts&quot;, 
if(Objective__c = &quot;06&quot;, &quot;Rebate Only&quot;, 
&quot;Not Defined&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Name</label>
    <type>Text</type>
</CustomField>