fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Opportunity_Products_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products_Line_ID__c</fullName>
    <label>Opportunity Products Line ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>