fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>Price_Quote__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>