fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Owner_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Owner_Approval_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Owner Approval Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>