fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <label>Owner Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>