fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Price_Per_Each__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Each__c</fullName>
    <formula>Sales_Price__c / Sales_Unit_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>