fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Price_Quote__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote__c</fullName>
    <label>Price Quote</label>
    <referenceTo>Price_Quote__c</referenceTo>
    <relationshipLabel>Price Quote Line Items</relationshipLabel>
    <relationshipName>Price_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>