fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Rep_Discount_Check__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount_Check__c</fullName>
    <formula>if(ISBLANK(Sales_Number__c) &amp;&amp; Sales_Price__c &gt; Rep_Price__c &amp;&amp; Sales_Price__c &lt; List_Price__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Discount Check</label>
    <type>Checkbox</type>
</CustomField>