fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Requested_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>