fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Requested_Pricing_Description__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pricing_Description__c</fullName>
    <formula>if(ISBLANK(Requested_Pricing__c),NULL,
Requested_Pricing__r.Agreement_Number__c &amp; &quot; - &quot; &amp; Requested_Pricing__r.Objective_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Pricing Description</label>
    <type>Text</type>
</CustomField>