fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Row_Order__c.field-meta.xml
<CustomField>
    <fullName>Row_Order__c</fullName>
    <label>Row Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>