fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Deal_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deal_Description__c</fullName>
    <label>Sales Deal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>